Bug 357601 - Drag and drop from an external program to Firefox does not use the proper drop effect. r=neil